.helm/dagster/ilb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-svc
  namespace: dagster-cloud
  annotations:
    networking.gke.io/load-balancer-type: Internal
    networking.gke.io/internal-load-balancer-subnet: load-balancer
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: user-cloud-dagster-cloud-agent-agent
  ports:
    - name: tcp-port-443
      protocol: TCP
      port: 443
      targetPort: 443
    - name: tcp-port-80
      protocol: TCP
      port: 80
      targetPort: 80
    - name: tcp-port-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
