.helm/dagster/neg-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neg-ing
  namespace: dagster-cloud
spec:
  defaultBackend:
    service:
      name: neg-svc # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
